# supply-invento

./: .gitignore  LICENSE  README.md  add_order_validation.js  db.sqlite3  edit_form.html  login.html  manage.py  profile.html  pyproject.toml  section_teachers.html  sm_table.html  st_table.html  supplier_home_page.html  teachers_home.html
Supply Request Portal/: add_order.html  archive.html  denied.html  edit_form.html  login.html  profile.html  section_teachers.html  sm_table.html  st_table.html  supplier_home_page.html  table.css  table.js
Supply Request Portal/css/: add_order.css  main.css  st_table.html  table.css  table.js
css/: add_order.css  table.css
staticfiles/css/: add_order.css  main.css
staticfiles/js/: table.js
supply/: admin.py  forms.py  models.py  urls.py  views.py
supply/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_role.py  0003_alter_ordertable_delivered_quantity_and_more.py  0004_alter_ordertable_teacher_recieved.py  0005_alter_ordertable_teachers_comments.py  0006_alter_ordertable_price.py  0007_alter_ordertable_delivered_quantity.py  0008_alter_ordertable_price.py  0009_alter_ordertable_teacher_recieved.py  0010_rename_customer_ordertable_user.py  0011_customuser_first_name_customuser_last_name.py  0012_rename_is_staff_customuser_is_admin_and_more.py  0013_rename_is_admin_customuser_is_staff.py  0014_ordertable_in_stock_and_more.py  0015_alter_ordertable_price.py  0016_alter_ordertable_options_ordertable_is_archive.py  (+3 more)
supply/templates/: 403.html  (+1 more)
supply_invento/: asgi.py  settings.py  urls.py  wsgi.py
(+24 files in other folders)
