[tool.poetry]
name = "supply-invento"
version = "0.1.0"
description = ""
authors = ["Asad F <theavenger1712@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
poetry = "^1.8.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
